# hackaton2-todo-web

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  kubernetes.skill  main.py  package-lock.json  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
backend/: Dockerfile  alembic.ini  app.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/src/: database.py  main.py
backend/src/middleware/: auth.py
backend/src/models/: conversation.py  message.py  task.py  task_with_relationship.py  user.py
backend/src/routers/: auth.py  chat.py  tasks.py
backend/src/schemas/: auth.py  chat.py  conversation.py  task.py  user.py
backend/src/services/: agent_service.py  mcp_server.py
backend/src/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/utils/: jwt.py  security.py  validation.py
backend/tests/integration/: test_auth.py  test_tasks.py
backend/tests/unit/: test_auth.py  test_tasks.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: .dockerignore  .eslintrc.json  Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: accessibility.ts  animation-hooks.ts  animations.ts  api.ts
frontend/public/: index.html
frontend/tests/: setup.ts
frontend/types/: task.ts
history/adr/: 001-card-based-auth-ui-design.md  (+1 more)
k8s/: README.md
(+246 files in other folders)
